[package]
name = "elev"
version = "0.3.0"
edition = "2018"
authors = ["Robin Mirow <robinmirow@live.com>"]
license = "MIT OR Apache-2.0"
build = "build.rs"
autobins = false

[features]
default = []
require-elevation = []

[[bin]]
name = "elev-run"
path = "src/bin/elev_run.rs"

[[bin]]
name = "elev"
path = "src/bin/elev.rs"

[dependencies]
clap = "2.32.0"
scopeguard = "0.3.3"
termcolor = "1.0.4"
sha2 = "0.8.0"
hex = "0.3.2"

[dependencies.winapi]
version = "0.3.6"
features = [
    "shellapi",
    "winuser",
    "minwindef",
    "combaseapi",
    "ntdef",
    "objbase",
    "synchapi",
    "winbase",
    "processthreadsapi",
    "wincon",
    "winerror",
]

[build-dependencies]
embed-resource = "1.1.4"
