[package]
name = "elev"
version = "0.3.1"
edition = "2024"
authors = ["Robin Mirow <robinmirow@live.com>"]
license = "MIT OR Apache-2.0"
build = "build.rs"
autobins = false

[features]
default = []
require-elevation = []

[[bin]]
name = "elev-run"
path = "src/bin/elev_run.rs"

[[bin]]
name = "elev"
path = "src/bin/elev.rs"

[dependencies]
clap = { version = "4.5.42", features = ["cargo"] }
scopeguard = "1.2.0"
termcolor = "1.4.1"
sha2 = "0.10.9"
hex = "0.4.3"

[dependencies.winapi]
version = "0.3.9"
features = [
    "shellapi",
    "winuser",
    "minwindef",
    "combaseapi",
    "ntdef",
    "objbase",
    "handleapi",
    "synchapi",
    "winbase",
    "processthreadsapi",
    "wincon",
    "winerror",
]

[build-dependencies]
embed-resource = "3.0.5"
